// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`if user is logged in park with map SelectLocation clicking on cancel will change drawer to group overview 1`] = `
<body
  style=""
>
  <div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper makeStyles-drawerPaperPermanent makeStyles-blurred MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root makeStyles-container"
        >
          <div
            class="MuiContainer-root makeStyles-body MuiContainer-maxWidthLg"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter"
                >
                  drawer.selectLocation.title
                </h5>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
                >
                  drawer.selectLocation.showCar
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
                >
                  drawer.selectLocation.description
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-contained makeStyles-button MuiButton-containedPrimary MuiButton-disabled MuiButton-fullWidth MuiButtonBase-disabled"
                    disabled=""
                    id="park-map-2-confirm"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiButton-label makeStyles-label"
                    >
                      misc.confirm
                    </span>
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-fullWidth"
                    id="park-map-2-cancel"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      misc.cancel
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root makeStyles-footer"
          >
            <div
              class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-space-evenly"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    privacyPolicy.title
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    imprint.title
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`if user is logged in park with map SelectLocation clicking on cancel will change drawer to group overview 2`] = `
<body
  style=""
>
  <div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper makeStyles-drawerPaperPermanent makeStyles-blurred MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root makeStyles-container"
        >
          <div
            class="MuiContainer-root makeStyles-body MuiContainer-maxWidthLg"
          >
            <div
              class="MuiBox-root MuiBox-root makeStyles-root"
            >
              <div
                class="MuiBox-root MuiBox-root makeStyles-btn"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root makeStyles-groupButtonContainer MuiGrid-item"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label makeStyles-label"
                        >
                          SELECTED GROUP
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root makeStyles-editButtonContainer MuiGrid-item"
                  >
                    <span
                      class=""
                      title="drawer.groupMenu.item.manage"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root makeStyles-editButtonRoot MuiButton-text MuiButton-textPrimary makeStyles-textPrimary"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label makeStyles-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root makeStyles-cars"
              >
                <div
                  class="MuiGrid-root makeStyles-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiPaper-root MuiCard-root makeStyles-cardRoot makeStyles-carContainerDriving MuiPaper-outlined MuiPaper-rounded"
                    >
                      <div
                        class="MuiCardHeader-root makeStyles-cardHeader"
                      >
                        <div
                          class="MuiCardHeader-avatar"
                        >
                          <img
                            alt="car-icon-Blue"
                            height="35x"
                            src="blue_location_marker.svg"
                            width="35px"
                          />
                        </div>
                        <div
                          class="MuiCardHeader-content"
                        >
                          <span
                            class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
                          >
                            <b>
                              Car3
                            </b>
                          </span>
                          <h6
                            class="MuiTypography-root makeStyles-textDriving MuiTypography-subtitle2"
                          >
                            drawer.cars.youAreDriving
                          </h6>
                        </div>
                      </div>
                      <div
                        class="MuiCardActions-root makeStyles-actionsDriving MuiCardActions-spacing"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-justify-content-xs-space-evenly"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-textDriving MuiButton-fullWidth"
                              id="park-current-car-2"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                                  />
                                </svg>
                                drawer.cars.parkCurrent
                              </span>
                            </button>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-textDriving MuiButton-fullWidth"
                              id="park-map-car-2"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M20.5 3l-.16.03L15 5.1 9 3 3.36 4.9c-.21.07-.36.25-.36.48V20.5c0 .28.22.5.5.5l.16-.03L9 18.9l6 2.1 5.64-1.9c.21-.07.36-.25.36-.48V3.5c0-.28-.22-.5-.5-.5zM15 19l-6-2.11V5l6 2.11V19z"
                                  />
                                </svg>
                                drawer.cars.parkMap
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiPaper-root MuiCard-root makeStyles-cardRoot MuiPaper-outlined MuiPaper-rounded"
                    >
                      <div
                        class="MuiCardHeader-root makeStyles-cardHeader"
                      >
                        <div
                          class="MuiCardHeader-avatar"
                        >
                          <img
                            alt="car-icon-Red"
                            height="35x"
                            src="red_location_marker.svg"
                            width="35px"
                          />
                        </div>
                        <div
                          class="MuiCardHeader-content"
                        >
                          <span
                            class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
                          >
                            <b>
                              Car1
                            </b>
                          </span>
                          <span
                            class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
                          >
                            <div
                              class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall"
                            >
                              <span
                                class="MuiChip-label MuiChip-labelSmall"
                              >
                                misc.available
                              </span>
                            </div>
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiCardActions-root MuiCardActions-spacing"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-justify-content-xs-space-evenly"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary makeStyles-textPrimary MuiButton-fullWidth"
                              id="drive-car-1"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M18.92 5.01C18.72 4.42 18.16 4 17.5 4h-11c-.66 0-1.21.42-1.42 1.01L3 11v8c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h12v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-8l-2.08-5.99zM6.5 15c-.83 0-1.5-.67-1.5-1.5S5.67 12 6.5 12s1.5.67 1.5 1.5S7.33 15 6.5 15zm11 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zM5 10l1.5-4.5h11L19 10H5z"
                                  />
                                </svg>
                                drawer.cars.drive
                              </span>
                            </button>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary makeStyles-textPrimary MuiButton-fullWidth"
                              id="view-car-1"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                                  />
                                </svg>
                                drawer.cars.view
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiPaper-root MuiCard-root makeStyles-cardRoot MuiPaper-outlined MuiPaper-rounded"
                    >
                      <div
                        class="MuiCardHeader-root makeStyles-cardHeader"
                      >
                        <div
                          class="MuiCardHeader-avatar"
                        >
                          <img
                            alt="car-icon-Green"
                            height="35x"
                            src="green_location_marker.svg"
                            width="35px"
                          />
                        </div>
                        <div
                          class="MuiCardHeader-content"
                        >
                          <span
                            class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
                          >
                            <b>
                              Car2
                            </b>
                          </span>
                          <h6
                            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                          >
                            drawer.cars.drivenBy
                          </h6>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root makeStyles-footer"
          >
            <div
              class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-space-evenly"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    privacyPolicy.title
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    imprint.title
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`if user is logged in park with map SelectLocation clicking on map will enable confirm button 1`] = `
<body
  style=""
>
  <div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper makeStyles-drawerPaperPermanent makeStyles-blurred MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root makeStyles-container"
        >
          <div
            class="MuiContainer-root makeStyles-body MuiContainer-maxWidthLg"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter"
                >
                  drawer.selectLocation.title
                </h5>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
                >
                  drawer.selectLocation.showCar
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
                >
                  drawer.selectLocation.description
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-contained makeStyles-button MuiButton-containedPrimary MuiButton-disabled MuiButton-fullWidth MuiButtonBase-disabled"
                    disabled=""
                    id="park-map-2-confirm"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiButton-label makeStyles-label"
                    >
                      misc.confirm
                    </span>
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-fullWidth"
                    id="park-map-2-cancel"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      misc.cancel
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root makeStyles-footer"
          >
            <div
              class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-space-evenly"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    privacyPolicy.title
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    imprint.title
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`if user is logged in park with map clicking on park on map sets selected car on map context to car and drawer will show SelectLocation 1`] = `
<body
  style=""
>
  <div>
    <p>
      Car3
    </p>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper makeStyles-drawerPaperPermanent makeStyles-blurred MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root makeStyles-container"
        >
          <div
            class="MuiContainer-root makeStyles-body MuiContainer-maxWidthLg"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter"
                >
                  drawer.selectLocation.title
                </h5>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
                >
                  drawer.selectLocation.showCar
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
                >
                  drawer.selectLocation.description
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-contained makeStyles-button MuiButton-containedPrimary MuiButton-disabled MuiButton-fullWidth MuiButtonBase-disabled"
                    disabled=""
                    id="park-map-2-confirm"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiButton-label makeStyles-label"
                    >
                      misc.confirm
                    </span>
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-fullWidth"
                    id="park-map-2-cancel"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      misc.cancel
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root makeStyles-footer"
          >
            <div
              class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-space-evenly"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    privacyPolicy.title
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    imprint.title
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`if user is logged in renders create group button if user has no groups 1`] = `
<body
  style=""
>
  <div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper makeStyles-drawerPaperPermanent makeStyles-blurred MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root makeStyles-container"
        >
          <div
            class="MuiContainer-root makeStyles-body MuiContainer-maxWidthLg"
          >
            <div
              class="MuiBox-root MuiBox-root makeStyles-root"
            >
              <div
                class="MuiBox-root MuiBox-root makeStyles-btn"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label makeStyles-label"
                  >
                    drawer.createGroup
                  </span>
                </button>
              </div>
              <div
                class="MuiBox-root MuiBox-root makeStyles-cars"
              >
                <div
                  class="MuiGrid-root makeStyles-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root makeStyles-footer"
          >
            <div
              class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-space-evenly"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    privacyPolicy.title
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    imprint.title
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`if user is logged in renders list of cars correctly if a group is selected 1`] = `
<body
  style=""
>
  <div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper makeStyles-drawerPaperPermanent makeStyles-blurred MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root makeStyles-container"
        >
          <div
            class="MuiContainer-root makeStyles-body MuiContainer-maxWidthLg"
          >
            <div
              class="MuiBox-root MuiBox-root makeStyles-root"
            >
              <div
                class="MuiBox-root MuiBox-root makeStyles-btn"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root makeStyles-groupButtonContainer MuiGrid-item"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label makeStyles-label"
                        >
                          SELECTED GROUP
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root makeStyles-editButtonContainer MuiGrid-item"
                  >
                    <span
                      class=""
                      title="drawer.groupMenu.item.manage"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root makeStyles-editButtonRoot MuiButton-text MuiButton-textPrimary makeStyles-textPrimary"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label makeStyles-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root makeStyles-cars"
              >
                <div
                  class="MuiGrid-root makeStyles-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiPaper-root MuiCard-root makeStyles-cardRoot makeStyles-carContainerDriving MuiPaper-outlined MuiPaper-rounded"
                    >
                      <div
                        class="MuiCardHeader-root makeStyles-cardHeader"
                      >
                        <div
                          class="MuiCardHeader-avatar"
                        >
                          <img
                            alt="car-icon-Blue"
                            height="35x"
                            src="blue_location_marker.svg"
                            width="35px"
                          />
                        </div>
                        <div
                          class="MuiCardHeader-content"
                        >
                          <span
                            class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
                          >
                            <b>
                              Car3
                            </b>
                          </span>
                          <h6
                            class="MuiTypography-root makeStyles-textDriving MuiTypography-subtitle2"
                          >
                            drawer.cars.youAreDriving
                          </h6>
                        </div>
                      </div>
                      <div
                        class="MuiCardActions-root makeStyles-actionsDriving MuiCardActions-spacing"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-justify-content-xs-space-evenly"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-textDriving MuiButton-fullWidth"
                              id="park-current-car-2"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
                                  />
                                </svg>
                                drawer.cars.parkCurrent
                              </span>
                            </button>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-textDriving MuiButton-fullWidth"
                              id="park-map-car-2"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M20.5 3l-.16.03L15 5.1 9 3 3.36 4.9c-.21.07-.36.25-.36.48V20.5c0 .28.22.5.5.5l.16-.03L9 18.9l6 2.1 5.64-1.9c.21-.07.36-.25.36-.48V3.5c0-.28-.22-.5-.5-.5zM15 19l-6-2.11V5l6 2.11V19z"
                                  />
                                </svg>
                                drawer.cars.parkMap
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiPaper-root MuiCard-root makeStyles-cardRoot MuiPaper-outlined MuiPaper-rounded"
                    >
                      <div
                        class="MuiCardHeader-root makeStyles-cardHeader"
                      >
                        <div
                          class="MuiCardHeader-avatar"
                        >
                          <img
                            alt="car-icon-Red"
                            height="35x"
                            src="red_location_marker.svg"
                            width="35px"
                          />
                        </div>
                        <div
                          class="MuiCardHeader-content"
                        >
                          <span
                            class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
                          >
                            <b>
                              Car1
                            </b>
                          </span>
                          <span
                            class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
                          >
                            <div
                              class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall"
                            >
                              <span
                                class="MuiChip-label MuiChip-labelSmall"
                              >
                                misc.available
                              </span>
                            </div>
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiCardActions-root MuiCardActions-spacing"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-justify-content-xs-space-evenly"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary makeStyles-textPrimary MuiButton-fullWidth"
                              id="drive-car-1"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M18.92 5.01C18.72 4.42 18.16 4 17.5 4h-11c-.66 0-1.21.42-1.42 1.01L3 11v8c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h12v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-8l-2.08-5.99zM6.5 15c-.83 0-1.5-.67-1.5-1.5S5.67 12 6.5 12s1.5.67 1.5 1.5S7.33 15 6.5 15zm11 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zM5 10l1.5-4.5h11L19 10H5z"
                                  />
                                </svg>
                                drawer.cars.drive
                              </span>
                            </button>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary makeStyles-textPrimary MuiButton-fullWidth"
                              id="view-car-1"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                                  />
                                </svg>
                                drawer.cars.view
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiPaper-root MuiCard-root makeStyles-cardRoot MuiPaper-outlined MuiPaper-rounded"
                    >
                      <div
                        class="MuiCardHeader-root makeStyles-cardHeader"
                      >
                        <div
                          class="MuiCardHeader-avatar"
                        >
                          <img
                            alt="car-icon-Green"
                            height="35x"
                            src="green_location_marker.svg"
                            width="35px"
                          />
                        </div>
                        <div
                          class="MuiCardHeader-content"
                        >
                          <span
                            class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
                          >
                            <b>
                              Car2
                            </b>
                          </span>
                          <h6
                            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                          >
                            drawer.cars.drivenBy
                          </h6>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root makeStyles-footer"
          >
            <div
              class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-space-evenly"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    privacyPolicy.title
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    imprint.title
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`if user is logged in renders select group button if user has at least one group and none is selected 1`] = `
<body
  style=""
>
  <div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper makeStyles-drawerPaperPermanent makeStyles-blurred MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root makeStyles-container"
        >
          <div
            class="MuiContainer-root makeStyles-body MuiContainer-maxWidthLg"
          >
            <div
              class="MuiBox-root MuiBox-root makeStyles-root"
            >
              <div
                class="MuiBox-root MuiBox-root makeStyles-btn"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root makeStyles-groupButtonContainer MuiGrid-item"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label makeStyles-label"
                        >
                          drawer.groupMenu.noSelection
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root makeStyles-editButtonContainer MuiGrid-item"
                  >
                    <span
                      class=""
                      title="drawer.groupMenu.item.manage"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root makeStyles-editButtonRoot MuiButton-text MuiButton-textPrimary makeStyles-textPrimary MuiButton-disabled MuiButtonBase-disabled"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          class="MuiButton-label makeStyles-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root makeStyles-cars"
              >
                <div
                  class="MuiGrid-root makeStyles-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root makeStyles-footer"
          >
            <div
              class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-space-evenly"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    privacyPolicy.title
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    imprint.title
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`if user is logged in view location location button is disabled if latitude or longitude is null 1`] = `
<body
  style=""
>
  <div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper makeStyles-drawerPaperPermanent makeStyles-blurred MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root makeStyles-container"
        >
          <div
            class="MuiContainer-root makeStyles-body MuiContainer-maxWidthLg"
          >
            <div
              class="MuiBox-root MuiBox-root makeStyles-root"
            >
              <div
                class="MuiBox-root MuiBox-root makeStyles-btn"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                >
                  <div
                    class="MuiGrid-root makeStyles-groupButtonContainer MuiGrid-item"
                  >
                    <div
                      class="MuiBox-root MuiBox-root"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label makeStyles-label"
                        >
                          SELECTED GROUP
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root makeStyles-editButtonContainer MuiGrid-item"
                  >
                    <span
                      class=""
                      title="drawer.groupMenu.item.manage"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root makeStyles-editButtonRoot MuiButton-text MuiButton-textPrimary makeStyles-textPrimary"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label makeStyles-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root makeStyles-cars"
              >
                <div
                  class="MuiGrid-root makeStyles-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiPaper-root MuiCard-root makeStyles-cardRoot MuiPaper-outlined MuiPaper-rounded"
                    >
                      <div
                        class="MuiCardHeader-root makeStyles-cardHeader"
                      >
                        <div
                          class="MuiCardHeader-avatar"
                        >
                          <img
                            alt="car-icon-Red"
                            height="35x"
                            src="red_location_marker.svg"
                            width="35px"
                          />
                        </div>
                        <div
                          class="MuiCardHeader-content"
                        >
                          <span
                            class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
                          >
                            <b>
                              Car1
                            </b>
                          </span>
                          <span
                            class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
                          >
                            <div
                              class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall"
                            >
                              <span
                                class="MuiChip-label MuiChip-labelSmall"
                              >
                                misc.available
                              </span>
                            </div>
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiCardActions-root MuiCardActions-spacing"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-justify-content-xs-space-evenly"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary makeStyles-textPrimary MuiButton-fullWidth"
                              id="drive-car-1"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M18.92 5.01C18.72 4.42 18.16 4 17.5 4h-11c-.66 0-1.21.42-1.42 1.01L3 11v8c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h12v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-8l-2.08-5.99zM6.5 15c-.83 0-1.5-.67-1.5-1.5S5.67 12 6.5 12s1.5.67 1.5 1.5S7.33 15 6.5 15zm11 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zM5 10l1.5-4.5h11L19 10H5z"
                                  />
                                </svg>
                                drawer.cars.drive
                              </span>
                            </button>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary makeStyles-textPrimary MuiButton-disabled MuiButton-fullWidth MuiButtonBase-disabled"
                              disabled=""
                              id="view-car-1"
                              tabindex="-1"
                              type="button"
                            >
                              <span
                                class="MuiButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                                  />
                                </svg>
                                drawer.cars.view
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiPaper-root MuiCard-root makeStyles-cardRoot MuiPaper-outlined MuiPaper-rounded"
                    >
                      <div
                        class="MuiCardHeader-root makeStyles-cardHeader"
                      >
                        <div
                          class="MuiCardHeader-avatar"
                        >
                          <img
                            alt="car-icon-Red"
                            height="35x"
                            src="red_location_marker.svg"
                            width="35px"
                          />
                        </div>
                        <div
                          class="MuiCardHeader-content"
                        >
                          <span
                            class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
                          >
                            <b>
                              Car2
                            </b>
                          </span>
                          <span
                            class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
                          >
                            <div
                              class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall"
                            >
                              <span
                                class="MuiChip-label MuiChip-labelSmall"
                              >
                                misc.available
                              </span>
                            </div>
                          </span>
                        </div>
                      </div>
                      <div
                        class="MuiCardActions-root MuiCardActions-spacing"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-justify-content-xs-space-evenly"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary makeStyles-textPrimary MuiButton-fullWidth"
                              id="drive-car-2"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M18.92 5.01C18.72 4.42 18.16 4 17.5 4h-11c-.66 0-1.21.42-1.42 1.01L3 11v8c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-1h12v1c0 .55.45 1 1 1h1c.55 0 1-.45 1-1v-8l-2.08-5.99zM6.5 15c-.83 0-1.5-.67-1.5-1.5S5.67 12 6.5 12s1.5.67 1.5 1.5S7.33 15 6.5 15zm11 0c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zM5 10l1.5-4.5h11L19 10H5z"
                                  />
                                </svg>
                                drawer.cars.drive
                              </span>
                            </button>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                          >
                            <button
                              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary makeStyles-textPrimary MuiButton-fullWidth"
                              id="view-car-2"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                                  />
                                </svg>
                                drawer.cars.view
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root makeStyles-footer"
          >
            <div
              class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-space-evenly"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    privacyPolicy.title
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                  >
                    imprint.title
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders NotLoggedIn component if user is not logged in 1`] = `
<body
  style=""
>
  <div />
  <div
    aria-hidden="true"
    class="MuiDrawer-root MuiDrawer-modal makeStyles-drawer"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 0; visibility: hidden;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper MuiDrawer-paperAnchorRight MuiPaper-elevation16"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      tabindex="-1"
    >
      <div
        class="MuiBox-root MuiBox-root makeStyles-container"
      >
        <div
          class="MuiBox-root MuiBox-root makeStyles-header"
        >
          <div
            class="MuiBox-root MuiBox-root makeStyles-root"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="close"
              id="drawer-close"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root makeStyles-fullHeight makeStyles-center"
        >
          <div
            class="MuiBox-root MuiBox-root makeStyles-center"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.title
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.message
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root makeStyles-footer"
        >
          <div
            class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-space-evenly"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                >
                  privacyPolicy.title
                </button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                >
                  imprint.title
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`renders and matches snapshot with not open and not permanent without crashing 1`] = `
<body
  style=""
>
  <div />
  <div
    aria-hidden="true"
    class="MuiDrawer-root MuiDrawer-modal makeStyles-drawer"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 0; visibility: hidden;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper MuiDrawer-paperAnchorRight MuiPaper-elevation16"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      tabindex="-1"
    >
      <div
        class="MuiBox-root MuiBox-root makeStyles-container"
      >
        <div
          class="MuiBox-root MuiBox-root makeStyles-header"
        >
          <div
            class="MuiBox-root MuiBox-root makeStyles-root"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="close"
              id="drawer-close"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root makeStyles-fullHeight makeStyles-center"
        >
          <div
            class="MuiBox-root MuiBox-root makeStyles-center"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.title
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.message
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root makeStyles-footer"
        >
          <div
            class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-space-evenly"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                >
                  privacyPolicy.title
                </button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                >
                  imprint.title
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`renders and matches snapshot with not open and permanent without crashing 1`] = `
<div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper makeStyles-drawerPaperPermanent makeStyles-blurred MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
    >
      <div
        class="MuiBox-root MuiBox-root makeStyles-container"
      >
        <div
          class="MuiBox-root MuiBox-root makeStyles-fullHeight makeStyles-center"
        >
          <div
            class="MuiBox-root MuiBox-root makeStyles-center"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.title
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.message
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root makeStyles-footer"
        >
          <div
            class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-space-evenly"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                >
                  privacyPolicy.title
                </button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                >
                  imprint.title
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders and matches snapshot with open and not permanent without crashing 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDrawer-root MuiDrawer-modal makeStyles-drawer"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper MuiDrawer-paperAnchorRight MuiPaper-elevation16"
      tabindex="-1"
    >
      <div
        class="MuiBox-root MuiBox-root makeStyles-container"
      >
        <div
          class="MuiBox-root MuiBox-root makeStyles-header"
        >
          <div
            class="MuiBox-root MuiBox-root makeStyles-root"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="close"
              id="drawer-close"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root makeStyles-fullHeight makeStyles-center"
        >
          <div
            class="MuiBox-root MuiBox-root makeStyles-center"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.title
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.message
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root makeStyles-footer"
        >
          <div
            class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-space-evenly"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                >
                  privacyPolicy.title
                </button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                >
                  imprint.title
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`renders and matches snapshot with open and permanent without crashing 1`] = `
<div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper makeStyles-drawerPaperPermanent makeStyles-blurred MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
    >
      <div
        class="MuiBox-root MuiBox-root makeStyles-container"
      >
        <div
          class="MuiBox-root MuiBox-root makeStyles-fullHeight makeStyles-center"
        >
          <div
            class="MuiBox-root MuiBox-root makeStyles-center"
          >
            <h5
              class="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.title
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
            >
              drawer.notLoggedIn.message
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root makeStyles-footer"
        >
          <div
            class="MuiContainer-root makeStyles-container MuiContainer-maxWidthLg"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-justify-content-xs-space-evenly"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                >
                  privacyPolicy.title
                </button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item"
              >
                <button
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
                >
                  imprint.title
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
